# two_detect

derail_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
derail_ws/devel/lib/derail/: derail_node
derail_ws/devel/lib/pkgconfig/: derail.pc
derail_ws/devel/share/derail/cmake/: derailConfig.cmake
derail_ws/src/derail/: CMakeLists.txt  package.xml
derail_ws/src/derail/launch/: derail.launch
derail_ws/src/derail/src/: derail_node.cpp
detect_box3d_example/: CMakeLists.txt  test.txt
detect_box3d_example/include/: result_verify.h
detect_box3d_example/src/: main.cpp  projectCloud.cpp
infer_test/: CMakeLists.txt  CameraIP.ini  摄像头轨道标定2025-2-17.docx
infer_test/include/: rail.h  yolo.hpp
infer_test/src/: main.cpp  rail.cpp  yolo.cu
livox_detection/tools/: run.sh  run_test_ros2.sh  rviz2.rviz  rviz3.rviz  test_ros.py  test_ros2.py  test_ros3.py  vis_ros.py
